fixed alignment issues on pages

--- a/styles/components/_underlined.scss
+++ b/styles/components/_underlined.scss
@@ -3,9 +3,9 @@
 /* underline-indicators */
 .underlined {
   & > * {
-    padding-block: var(--underline-gap, 1.6rem) 0;
+    padding-block: var(--underline-gap, 1.6rem);
     border: 0;
-    border-bottom: 0.32rem solid hsl(var(--clr-white) / 0);
+    border-bottom: 2px solid hsl(var(--clr-white) / 0);
     background-color: transparent;
     cursor: pointer;
 
